<resources>
    <string name="app_name">Tasks</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="add_task">Add Task</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_the_priority">Enter the Priority</string>
    <string name="enter_the_date">Enter the Date</string>
    <string name="enter_the_description">Enter the Description</string>
    <string name="update_task">Update Task</string>
    <string name="updatebutton">UpdateButton</string>
    <string name="update_done">Update Done</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_date">Task Date</string>
    <string name="priority">Priority</string>
    <string name="task_hive_app">Task Hive App.</string>
    <string name="save">Save</string>
</resources>