<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UpdateTaskFragment"
        android:padding="12dp">

        <TextView
            android:id="@+id/updateTaskHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/poppins"
            android:text="@string/update_task"
            android:textStyle="bold"
            android:textColor="@color/Green"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/updateTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/updateTaskHeading"
            android:layout_marginTop="10dp"
            android:background="@drawable/boarder"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_the_title"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/updateTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:hint="@string/enter_the_description"
            android:gravity="top"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/boarder"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:layout_below="@id/updateTaskTitle"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />
        <EditText
            android:id="@+id/updateTaskDate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_the_date"
            android:gravity="top"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/boarder"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:layout_below="@id/updateTaskDescription"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/updateTaskPriority"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_the_priority"
            android:gravity="top"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/boarder"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:layout_below="@id/updateTaskDate"
            android:textSize="20sp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/UpdateFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/lightGreen"
            android:clickable="true"
            android:contentDescription="@string/update_done"
            android:focusable="true"
            android:tintMode="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/done_icon"/>




    </RelativeLayout>
</layout>