<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddTaskFragment"
        android:padding="12dp">

        <TextView
            android:id="@+id/addTaskHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/poppins"
            android:text="@string/add_task"
            android:textStyle="bold"
            android:textColor="@color/Green"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/addTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/addTaskHeading"
            android:layout_marginTop="16dp"
            android:background="@drawable/boarder"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_the_title"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:hint="@string/enter_the_description"
            android:gravity="top"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/boarder"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:layout_below="@id/addTaskTitle"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />
        <EditText
            android:id="@+id/addTaskDate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_the_date"
            android:gravity="top"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/boarder"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:layout_below="@id/addTaskDescription"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/addTaskPriority"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_the_priority"
            android:gravity="top"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/boarder"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:layout_below="@id/addTaskDate"
            android:textSize="20sp"/>
        

    </RelativeLayout>



</layout>