<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/boarder"
            android:backgroundTint="@color/Green_200"
            android:padding="16dp">

            <TextView
                android:id="@+id/taskTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="200"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                android:text="@string/task_title"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/taskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="170dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                android:text="@string/task_description"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/taskDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="170dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                android:textStyle="italic"
                android:text="@string/task_date"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/taskPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="170dp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:fontFamily="@font/poppins"
                android:text="@string/priority"
                android:textSize="14sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>